--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,102 @@
+@import url("https://fonts.googleapis.com/css2?family=Manrope:wght@200..800&display=swap");
+
 body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  font-family: "Manrope", sans-serif;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+.app-layout .container {
+  max-width: 650px;
+  margin: 0 auto;
+  padding: 20px;
+}
+
+.app-layout .nested-checkbox {
+  font-size: 30px;
+  margin-bottom: 30px;
+  padding-bottom: 30px;
+  border-bottom: 1px dashed red;
+}
+
+.app-layout .nested-checkbox .parent-checkbox {
+  border-bottom: 1px solid rgb(207, 204, 204);
+  padding-bottom: 10px;
+}
+
+.app-layout .nested-checkbox .parent-checkbox span {
+  font-size: 18px;
+  color: blue;
+  margin-left: 15px;
+}
+
+.app-layout .nested-checkbox input.parent-check {
+  width: 25px;
+  height: 25px;
+  margin-right: 8px;
+}
+
+.app-layout .nested-checkbox .child-checkboxes {
+  font-size: 20px;
+  padding-top: 10px;
+}
+
+.app-layout .child-checkboxes input.child-check {
+  width: 20px;
+  height: 20px;
+  margin-right: 8px;
+}
+
+.uncompress-container {
+  margin-bottom: 30px;
+  padding-bottom: 30px;
+  border-bottom: 1px dashed red;
+}
+
+.uncompress-container input {
+  height: 40px;
+  border: 1px solid #000;
+  border-radius: 6px;
+  width: 100%;
+  padding-left: 10px;
+}
+
+.uncompress-container .uncompress-btn {
+  height: 40px;
+  background-color: #6d6dde;
+  color: #fff;
+  font-size: 16px;
+  border: 0;
+  border-radius: 6px;
+  display: block;
+  margin-top: 15px;
+  padding: 7px 15px;
+}
+
+.uncompress-container .uncompress-btn:disabled {
+  opacity: 0.5;
+  pointer-events: none;
+}
+
+::placeholder {
+  font-family: "Manrope", sans-serif;
+}
+
+/* =========================Progress bar styles=========================== */
+.progress-bar {
+  width: 100%;
+  height: 20px;
+  background-color: #f0f0f0;
+  border-radius: 4px;
+  overflow: hidden;
+}
+
+.progress-bar-fill {
+  height: 100%;
+  background-color: #4caf50;
+  transition: width 1s ease-in-out;
+}
+
+.progress-bar-error {
+  height: 100%;
+  background-color: red;
+  transition: width 1s ease-in-out;
 }
